@@ -19,7 +19,7 @@
 # You should have received a copy of the GNU General Public License
 # along with cygport.  If not, see <http://www.gnu.org/licenses/>.
 #
-# $Id: berkdb.cygclass,v 1.9 2008-01-02 04:25:37 yselkowitz Exp $
+# $Id: berkdb.cygclass,v 1.10 2008-04-16 00:16:56 yselkowitz Exp $
 #
 ################################################################################
 
@@ -53,7 +53,7 @@ PKG_CONTENTS[2]="etc/p*/lib${PN}-devel.sh usr/include/ usr/lib/lib* usr/share/do
 PKG_CONTENTS[3]="etc/p*/java-${PN}.sh usr/bin/cygdb_java-${SLOT}.dll ${JAVA_DIR#/}"
 PKG_CONTENTS[4]="${TCL_LIBDIR#/}"
 
-DIFF_EXCLUDES="configure config.hin libtool.ac db.jar"
+DIFF_EXCLUDES="configure config.hin db.jar libtool.ac lt*.ac"
 
 # At a minimum, the following must be changed:
 # * chmod +w dist/Makefile.in dist/aclocal/tcl.ac dist/configure.ac
@@ -63,13 +63,34 @@ DIFF_EXCLUDES="configure config.hin libtool.ac db.jar"
 # * Undef __lock_* macros in lock/lock_region.c (before 4.3)
 
 berkdb_autoreconf() {
+	check_prog_req libtoolize libtool
+
 	local errormsg="berkdb: libtoolize failed"
+	local lt_v=$(libtoolize --version | head -n 1 | cut -d ' ' -f 4)
 
 	[ -f s_config ] && [ -d aclocal ] || error "not in dist/ directory"
 
-	cp -f /usr/share/aclocal/libtool.m4 aclocal/libtool.ac || error "${errormsg}"
-	cp -f /usr/share/libtool/config.{guess,sub} . || error "${errormsg}"
-	cp -f /usr/share/libtool/ltmain.sh . || error "${errormsg}"
+	case ${lt_v} in
+	1.5.*)
+		cp -f /usr/share/aclocal/libtool.m4 aclocal/ || error "${errormsg}"
+		libtoolize --copy --force || error "${errormsg}"
+		;;
+	1.*|2.[01].*)
+		error "berkdb: unsupported libtool version: ${lt_v}"
+		;;
+	2.*)
+		ac_macrodir=aclocal libtoolize --copy --force --install || error "${errormsg}"
+		;;
+	*)
+		error "berkdb: unsupported libtool version: ${lt_v}"
+		;;
+	esac
+
+	# some versions require .ac extension, others use .m4
+	if [ -f aclocal/libtool.ac ]
+	then
+		rename .m4 .ac aclocal/*.m4
+	fi
 
 	./s_config || error "s_config failed"
 }
